<resources>
    <string name="app_name">Trips.pk</string>
    <string name="lbl_flights">Flights</string>
    <string name="lbl_tour">Tours</string>
    <string name="lbl_rent_a_car">Rent a car</string>
    <string name="lbl_visa">Visas</string>
    <string name="lbl_insurance">Insurance</string>
    <string name="lbl_agents">Agents</string>
    <string name="lbl_hajj">Haj/Umra</string>
    <string name="lbl_destination">Destination</string>
    <string name="lbl_dashboard">Dashboard</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="lbl_return">Return</string>
    <string name="lbl_one_way">One Way</string>
    <string name="lbl_multi_destination">Multi Destination</string>
    <string name="lbl_islamabad">Islamabad</string>
    <string name="lbl_dubai">Dubai</string>
    <string name="lbl_start_date">09-Dec-22</string>
    <string name="lbl_end_date">14-Dec-22</string>
    <string name="lbl_0_child">0 Childs</string>
    <string name="lbl_0_infant">0 Infant</string>
    <string name="lbl_origin">Origin</string>
    <string name="lbl_from_date">From</string>
    <string name="lbl_to_date">To</string>
    <string name="lbl_0_adult">0 Adult</string>
    <string name="lbl_adult">1 Adult</string>
    <string name="lbl_pakistan">Pakistan</string>
    <string name="lbl_search">Search</string>
    <string name="_12_years_and_above">12 Years and above</string>
    <string name="_01">01</string>
    <string name="lbl_child">1 Child</string>
    <string name="_childern_age">2-11 Years at the time of travel</string>
    <string name="lbl_infant">1 Infant</string>
    <string name="_infant_age">0-23 month at the time of travel</string>
    <string name="lbl_emirates">Emirates</string>
    <string name="lbl_flight_origin_time">18:30 LHE</string>
    <string name="lbl_flight_final_time">08:05 OSL</string>
    <string name="lbl_flight_origin_date">Fri. 09-Dec-22</string>
    <string name="lbl_flight_final_date">Sat. 10 Dec, 22</string>
    <string name="lbl_flight_total_time">17h 35 Min</string>
    <string name="lbl_baggage">Baggage:</string>
    <string name="lbl_weight">Cabin 7kg</string>
    <string name="_weight">7kg</string>
    <string name="lbl_money">Rs:158,000</string>
    <string name="airlines_and_stops">AirLines\n&amp; Stops</string>
    <string name="lbl_departure">Departure</string>
    <string name="lbl_departure_and_return">Dubai-Lahore</string>
    <string name="lbl_two_stops">Two Stops</string>
    <string name="lbl_outbound_flight_detail">Outbound Flight</string>
    <string name="lbl_travel_time">- Travel Time</string>
    <string name="lahore_pakistan">Lahore-Pakistan</string>
    <string name="dxb_uae">Dubai-Uae</string>
    <string name="total_price">Total Price</string>
    <string name="lbl_filter">Flight Filter</string>
    <string name="cabin_class">Cabin class</string>
    <string name="all">All</string>
    <string name="with_baggage">With Baggage</string>
    <string name="without_baggage">Without Baggage</string>
    <string name="price">Price</string>
    <array name="initial_range_slider_values">
        <item>1</item>
        <item>100</item>
    </array>
    <string name="end_date">Destination</string>
    <string name="start_date">Origin</string>
    <string name="access_token"></string>
    <string name="lbl_field_required">This field is required</string>
    <string name="lbl_arival">Arrival</string>
    <string name="lbl_enter_info_of_traveler">Enter Information about the traveler\n(Contact Person)</string>
    <string name="label_prefix">Prefix</string>
    <string name="label_first_name">First Name</string>
    <string name="label_middle_name">Middle Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_contact">Contact #</string>
    <string name="label_contact_no">03415555555</string>
    <string name="label_email">Email</string>
    <string name="label_email_">softsol@gmail.com</string>
    <string name="label_city">City / Location</string>
    <string name="label_country">Country</string>
    <string name="label_address">Address</string>
    <string name="label_zipcode">Zip Code / Postal Code</string>
    <string name="lbl_passport_detail">Passport Detail</string>
    <string name="label_passport_no">Passport No</string>
    <string name="label_expire_date">Expire Date</string>
    <string name="label_passport_nat_country">Passport Nationality Country</string>
    <string name="lbl_enter_about_traveler">Enter Information about the traveler</string>
    <string name="lbl_adult1">(Adult # 1)</string>
    <string name="lbl_child1">(Child # 1)</string>
    <string name="label_gender">Gender</string>
    <string name="lbl_continue_next">CONTINUE TO THE NEXT</string>
    <string name="lbl_book_confirmed">Your flight request has been received &amp;\none of our agent will contact you for\nconfirmation</string>
    <string name="lbl_back_to_home">BACK TO HOME</string>
    <string name="lbl_wait">Please wait…</string>
    <string name="lbl_where">Where?</string>
    <string name="lbl_find_on_a_location">Find on a location such as Dubai, Turkey\nNaran, Hunza etc</string>
    <string name="lbl_worldwide_trips">Worldwide trips</string>
    <string name="lbl_view_all">VIEW ALL</string>
    <string name="lbl_tour_pak">Tour packages for Pakistan</string>
    <string name="lbl_europe_tour">Europe 16 days tour summer vocations from Karachi</string>
    <string name="lbl_16_days">16 days trip to BERNE</string>
    <string name="lbl_included_trip">Included in Trip</string>
    <string name="lbl_highlight">Highlights</string>
    <string name="lbl_highlight_desc">Lucerne, Milan, Venice, Rome,Vatican,Arezzo,Florence,Pisa,Genoa,Monaco,Nice,Cannes,Avignon, Paris</string>
    <string name="lbl_desc">Description</string>
    <string name="lbl_full_desc">Paris is one of the most beautiful metropolises in the world. It is known worldwide for the Louvre Museum, Notre- Dameedifice, and the Eiffel palace. It has a character of being a romantic and artistic megacity. The megacity is also known for its high qualigycooking.</string>
    <string name="lbl_price_date">Price/Dates</string>
    <string name="lbl_book_now">BOOK NOW</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_adult">Adult</string>
    <string name="label_child">Child</string>
    <string name="label_infant">Infant</string>
    <string name="lbl_departure_city">Departure City</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_share_detail">Please share further details/preferences*</string>
    <string name="lbl_enter_pickup_location">Enter Pickup Location</string>
    <string name="lbl_enter_category">Enter Category</string>
    <string name="lbl_honda_civic">Honda Civic</string>
    <string name="lbl_per_day">Per day</string>
    <string name="lbl_rent_a_car_companies">Rent a Car Companies in Pakistan</string>
    <string name="lbl_find_vehical_type">Find a Vehical type to suit\nyour needs</string>
    <string name="lbl_slash_per_day">/Per Day</string>
    <string name="lbl_lhr">Lahore</string>
    <string name="lbl_rent_a_car_booking">Rent a Car Booking</string>
    <string name="lbl_residence_city">City Of Residence*</string>
    <string name="lbl_where_u_need_car">Where You Need This Car?*</string>
    <string name="lbl_return_date">Return Date</string>
    <string name="lbl_pickup_date">pickup Date</string>
    <string name="lbl_done">DONE</string>
    <string name="lbl_type_country_name">Type a country name…</string>
    <string name="lbl_visa_service">Visa services for various countries for Pakistani Nationals</string>
    <string name="lbl_visa_processing_time">Processing Time (5-15) Working daysComplete documentation and Advice</string>
    <string name="lbl_turkey_visa_from_pak">Turkey visa from Pakistan</string>
    <string name="lbl_apply_now">Apply Now</string>
    <string name="lbl_turkey_visa_service">Turkey Visa Service</string>
    <string name="lbl_how_many_passenger">How Many Total Passengers?*</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_company">Company</string>
    <string name="lbl_group">Group</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_itenrary">Itenrary</string>
    <string name="lbl_loading">Loading…</string>
    <string name="lbl_trvel_insurace_world">Travel Insurance all over the World</string>
    <string name="lbl_insurance_agents_in_pak">Insurance Agents in Pakistan</string>
    <string name="lbl_flight_hotel_urmah">Flight | Hotel | Transport | Umrah Service</string>
    <string name="includes">Includes</string>
    <string name="lbl_5_star_hotel">5 Star Umrah Package with Haramain High Speed Train by Go Umrah</string>
    <string name="label_mobile_no">Mobile No.</string>
    <string name="lbl_umrah_duration">Duration of Umrah</string>
    <string name="lbl_pak_tour">Pakistan Tours</string>
    <string name="lbl_intl_tour">International Tours</string>
    <string name="lbl_select_dream_location">Select your dream location…</string>
    <string name="lbl_explore_world_with_us">Explore The World with us</string>
    <string name="lbl_explore_pak_with_us">Explore Pakistan with us</string>
    <string name="explore_world">Explore World</string>
    <string name="explore_pak">Explore Pakistan</string>
    <string name="destination_search">Destinations Search</string>
    <string name="lbl_agent_name">Agent name</string>
    <string name="lbl_top_travel_agent_in_pak">Top Travel Agents in Pakistan</string>
    <string name="lbl_travel_agent_in_cities">Travel Agents in Major Cities</string>
    <string name="offc_address">10-C Commercial, Block C PIA Housing Society, Lahore, 54000</string>
    <string name="saudia_announce">Saudi Arabia Government allows International passengers to Arrive &amp; Use any airport in the kingdom.</string>

</resources>