<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top_outbound_flight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_5dp">

            <TextView
                android:id="@+id/tv_outbound_flight_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_outbound_flight_detail"
                android:textSize="@dimen/_20sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_outbound_flight_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_two_stops"
                android:textSize="@dimen/_12sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_outbound_flight_detail"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_outbound_flight_travel_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_travel_time"
                android:textSize="@dimen/_12sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/grey_001"
                android:layout_marginStart="@dimen/_5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_outbound_flight_detail"
                app:layout_constraintStart_toEndOf="@id/tv_outbound_flight_stop" />

            <TextView
                android:id="@+id/tv_outbound_flight_total_travel_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_flight_total_time"
                android:textSize="@dimen/_12sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_outbound_flight_detail"
                app:layout_constraintStart_toEndOf="@id/tv_outbound_flight_travel_time" />

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_1dp"
                android:layout_height="@dimen/_0dp"
                app:layout_constraintTop_toTopOf="@id/tv_outbound_flight_total_travel_time"
                app:layout_constraintBottom_toBottomOf="@id/tv_outbound_flight_total_travel_time"
                app:layout_constraintStart_toEndOf="@id/tv_outbound_flight_total_travel_time"
                android:background="@color/black"
                android:layout_marginTop="@dimen/_2dp"
                android:layout_marginBottom="@dimen/_2dp"
                android:layout_marginStart="@dimen/_5dp" />

            <TextView
                android:id="@+id/tv_baggage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_baggage"
                android:textSize="@dimen/_12sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/grey_001"
                android:layout_marginStart="@dimen/_5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_outbound_flight_detail"
                app:layout_constraintStart_toEndOf="@id/view" />


            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_weight"
                android:textSize="@dimen/_12sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_outbound_flight_detail"
                app:layout_constraintStart_toEndOf="@id/tv_baggage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>