<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_1dp"
        android:foreground="@drawable/ic_fg_one_way_flight_cardview"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_going"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_flight_origin"
                    android:layout_width="@dimen/_40dp"
                    android:layout_height="@dimen/_30dp"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:src="@drawable/emirates_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_flight_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/lbl_emirates"
                    android:textColor="@color/grey_002"
                    android:textSize="@dimen/_13sp"
                    android:layout_marginStart="@dimen/_5dp"
                    app:layout_constraintStart_toEndOf="@id/iv_flight_origin"
                    app:layout_constraintTop_toTopOf="@id/iv_flight_origin"
                    app:layout_constraintBottom_toBottomOf="@id/iv_flight_origin"/>

                <TextView
                    android:id="@+id/tv_flight_tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="8619"
                    android:textColor="@color/grey_002"
                    android:textSize="@dimen/_15sp"
                    android:layout_marginEnd="@dimen/_10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/iv_flight_origin" />

                <TextView
                    android:id="@+id/tv_flight_origin_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/lbl_flight_origin_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:layout_marginTop="@dimen/_15dp"
                    app:layout_constraintStart_toStartOf="@id/iv_flight_origin"
                    app:layout_constraintTop_toBottomOf="@id/iv_flight_origin" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/iv_flight_going"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"

                    android:layout_marginBottom="@dimen/_5dp"
                    app:layout_constraintStart_toEndOf="@id/tv_flight_origin_time"
                    app:layout_constraintTop_toTopOf="@id/tv_flight_origin_time"
                    app:layout_constraintBottom_toBottomOf="@id/tv_flight_origin_time"
                    app:layout_constraintEnd_toStartOf="@id/tv_flight_final_time">
                    <ImageView
                        android:id="@+id/c1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="@dimen/_5dp"
                        android:src="@drawable/ic_circle_yellow"/>

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_flight_small"
                        android:elevation="@dimen/_3dp"
                        app:layout_constraintStart_toEndOf="@id/c1"
                        app:layout_constraintEnd_toStartOf="@id/c2"
                        app:layout_constraintTop_toTopOf="@id/c1"
                        app:layout_constraintBottom_toBottomOf="@id/c1"/>

                    <ImageView
                        android:id="@+id/c2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="@dimen/_5dp"
                        android:src="@drawable/ic_circle_yellow"/>

                    <View
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="@dimen/_2dp"
                        app:layout_constraintStart_toEndOf="@id/c1"
                        app:layout_constraintEnd_toStartOf="@id/c2"
                        app:layout_constraintTop_toTopOf="@id/c1"
                        app:layout_constraintBottom_toBottomOf="@id/c1"
                        android:background="@drawable/bg_dashed_line"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tv_flight_final_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/lbl_flight_final_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_flight_tc"
                    app:layout_constraintTop_toTopOf="@id/tv_flight_origin_time" />

                <TextView
                    android:id="@+id/tv_flight_origin_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/lbl_flight_origin_date"
                    android:textColor="@color/grey_002"
                    android:textSize="@dimen/_12sp"
                    app:layout_constraintStart_toStartOf="@id/iv_flight_origin"
                    app:layout_constraintTop_toBottomOf="@id/tv_flight_origin_time"/>

                <TextView
                    android:id="@+id/tv_flight_final_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/lbl_flight_final_date"
                    android:textColor="@color/grey_002"
                    android:textSize="@dimen/_12sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_flight_final_time"
                    app:layout_constraintTop_toBottomOf="@id/tv_flight_origin_time"/>

                <TextView
                    android:id="@+id/tv_total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/lbl_flight_total_time"
                    android:textColor="@color/grey_002"
                    android:textSize="@dimen/_12sp"
                    app:layout_constraintEnd_toEndOf="@id/iv_flight_going"
                    app:layout_constraintStart_toStartOf="@id/iv_flight_going"
                    app:layout_constraintTop_toBottomOf="@id/tv_flight_origin_time"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2dp"
                app:layout_constraintTop_toBottomOf="@id/cl_going"
                android:background="@drawable/bg_dashed_line"
                android:backgroundTint="@color/grey"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_12dp"/>

            <TextView
                android:id="@+id/tv_baggage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lbl_baggage"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />
            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lbl_weight"
                android:textColor="@color/grey_001"
                android:textSize="@dimen/_14sp"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintStart_toEndOf="@id/tv_baggage"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/lbl_money"
                android:textColor="@color/btn_color"
                android:textSize="@dimen/_16sp"
                android:layout_marginEnd="@dimen/_15dp"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_money"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>