<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.trips.pk.ui.flight.search.FlightSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/base_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout">


            <EditText
                android:id="@+id/ed_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:background="@drawable/bg_rounded_edittext"
                android:hint="@string/lbl_where"
                android:focusable="true"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:padding="@dimen/_10dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.ContainedButton"
                android:text="SEARCH"
                android:textSize="@dimen/_14sp"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@id/ed_search"
                android:layout_marginTop="@dimen/_16px"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"/>

            <TextView
                android:id="@+id/tvfind_on_a_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_find_on_a_location"
                android:layout_marginTop="@dimen/_10px"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12sp"
                app:layout_constraintTop_toBottomOf="@id/btn_search"
                app:layout_constraintStart_toStartOf="@id/btn_search"
                app:layout_constraintEnd_toEndOf="@id/btn_search"
                />

            <com.github.captain_miao.optroundcardview.OptRoundCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:behavior_hideable="true"
                android:background="#F2F2F2"
                app:layout_behavior="@string/bottom_sheet_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvfind_on_a_location"
                android:layout_marginTop="@dimen/_25px"
                app:optRoundCardBackgroundColor="@color/white"
                app:optRoundCardCornerRadius="35dp"
                app:optRoundCardLeftBottomCorner="false"
                app:optRoundCardRightBottomCorner="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_20dp">

                    <TextView
                        android:id="@+id/tv_worldwide_trip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/lbl_worldwide_trips"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="17sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_worldwide_trip"
                        app:layout_constraintBottom_toBottomOf="@id/tv_worldwide_trip"
                        android:text="@string/lbl_view_all"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="@dimen/_11sp"
                        android:textColor="@color/btn_color"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_worldwide_trip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:layout_constraintTop_toBottomOf="@id/tv_worldwide_trip"
                        android:layout_marginTop="@dimen/_12px"
                        tools:listitem="@layout/item_worldwide_trips"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                       app:spanCount="4"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.github.captain_miao.optroundcardview.OptRoundCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>